syntax = "proto3";

import "../auth/auth.proto";
import "../game/gameData.proto";
import "../game/gameEvent.proto";
import "../game/combat.proto";
import "../game/match.proto";

package packet;

// 공통 패킷 구조
message CommonPacket {
    ushort packetType = 1;
    ubyte versionLength = 2;
    string version = 3;   
    uint32 sequence = 4;
    uint32 payloadLength = 5;
    bytes payload = 6;
}

/* 
  최상위 GamePacket 메시지
*/
message GamePacket {
    oneof payload {
        C2SRegisterRequest registerRequest = 1;
        S2CRegisterResponse registerResponse = 2;
        C2SLoginRequest loginRequest = 3;
        S2CLoginResponse loginResponse = 4;
        
        C2SMatchRequest matchRequest = 5;
        S2CMatchStartNotification matchStartNotification = 6;
        S2CStateSyncNotification stateSyncNotification = 7;

        C2STowerPurchaseRequest towerPurchaseRequest = 8;
        S2CTowerPurchaseResponse towerPurchaseResponse = 9;
        S2CAddEnemyTowerNotification addEnemyTowerNotification = 10;

        C2SSpawnMonsterRequest spawnMonsterRequest = 11;
        S2CSpawnMonsterResponse spawnMonsterResponse = 12;
        S2CSpawnEnemyMonsterNotification spawnEnemyMonsterNotification = 13;

        C2STowerAttackRequest towerAttackRequest = 14;
        S2CEnemyTowerAttackNotification enemyTowerAttackNotification = 15;
        C2SMonsterAttackBaseRequest monsterAttackBaseRequest = 16;

        S2CUpdateBaseHPNotification updateBaseHpNotification = 17;
        S2CGameOverNotification gameOverNotification = 18;
        
        C2SGameEndRequest gameEndRequest = 19;
        C2SMonsterDeathNotification monsterDeathNotification = 20;
        S2CEnemyMonsterDeathNotification enemyMonsterDeathNotification = 21;
    }
}
